--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>PoseEstimationWebGL</title>
+    <title>Games</title>
     <style>
         html {
             box-sizing: border-box;
@@ -84,7 +84,7 @@
 
 <script src="Build/UnityLoader.js"></script>
 <script>
-    var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Build.json", {
+    var gameInstance = UnityLoader.instantiate("gameContainer", "Build/NewBuild.json", {
         onProgress: (gameInstance, progress) => {
             if (!gameInstance.Module) {
                 return;
