--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <script src="Build/UnityLoader.js"></script>
 <script>
-    var gameInstance = UnityLoader.instantiate("gameContainer", "Build/NewBuild.json", {
+    var gameInstance = UnityLoader.instantiate("gameContainer", "Build/NewestBuild.json", {
         onProgress: (gameInstance, progress) => {
             if (!gameInstance.Module) {
                 return;
